Add netlist2 initial files

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -6,6 +6,7 @@
 add_subdirectory(driver)
 add_subdirectory(hier)
 add_subdirectory(netlist)
+add_subdirectory(netlist2)
 add_subdirectory(reflect)
 add_subdirectory(rewriter)
 add_subdirectory(tidy)
